package com.example.learn.design.pattern.han._04创建型模式._04建造者模式;

public class Client {

    public static void main(String[] args) {
        // TODO Auto-generated method stub
        CommonHouse commonHouse = new CommonHouse();
        commonHouse.build();
    }

}
