@startuml
'https://plantuml.com/class-diagram

abstract class AbstractHouse{
    buildBaisc()
    buildWalls()
    roofed()
    build()
}

class CommonHouse

class HighBuilding

class Client

AbstractHouse <|-- CommonHouse
AbstractHouse <|-- HighBuilding
CommonHouse <.. Client
HighBuilding <.. Client

@enduml